--- a/package.json
+++ b/package.json
@@ -194,7 +194,11 @@
         "error",
         "fdescribe",
         "fit"
-      ]
+      ],
+      "indent" : 0,
+      "indent-legacy": [2, 2, {
+        "SwitchCase": 1
+      }]
     }
   }
 }
